--- a/frontend/src/app/pages/place-order/place-order.component.html
+++ b/frontend/src/app/pages/place-order/place-order.component.html
@@ -10,7 +10,7 @@
   </mat-step>
   <mat-step label="Place Order" editable="false" completed="false">
     <h1>Place Order</h1>
-    <div fxLayout="row wrap" fxLayoutGap="20px grid" fxLayoutGap.xs="0 grid">
+    <div fxLayout="row wrap" fxLayoutGap="20px grid" fxLayoutGap.xs="20px grid">
       <div fxFlex="70%" fxFlex.xs="100%">
         <table mat-table [dataSource]="cart.items" class="mat-elevation-z8">
           <!-- Image Column -->
