--- a/frontend/src/app/pages/cart/cart.component.html
+++ b/frontend/src/app/pages/cart/cart.component.html
@@ -1,5 +1,5 @@
 <h1>Shopping Cart</h1>
-<div fxLayout="row wrap" fxLayoutGap="20px grid" fxLayoutGap.xs="0 grid">
+<div fxLayout="row wrap" fxLayoutGap="20px grid" fxLayoutGap.xs="20px grid">
   <div *ngIf="cart" fxFlex="70%" fxFlex.xs="100%">
     <table mat-table [dataSource]="cart.items" class="mat-elevation-z8">
       <!-- Image Column -->
@@ -60,7 +60,7 @@
     </table>
   </div>
 
-  <div fxFlex="30%" fxFlex.xs="100%">
+  <div fxFlex="30%" fxFlex.xs="100%" class="mt-20">
     <mat-card class="mat-elevation-z4">
       <mat-list role="list">
         <mat-list-item role="listitem">
