--- a/frontend/src/app/pages/product-details/product-details.component.html
+++ b/frontend/src/app/pages/product-details/product-details.component.html
@@ -1,7 +1,7 @@
 <div class="back-to-result">
   <a routerLink="/">Back to result</a>
 </div>
-<div fxLayout="row wrap" fxLayoutGap="20px grid">
+<div fxLayout="row wrap" fxLayoutGap="20px grid" fxLayoutGap.xs="0 grid">
   <div fxFlex="50%" fxFlex.xs="100%">
     <img mat-card-image [src]="'../assets' + product.image" />
   </div>
