--- a/frontend/src/app/pages/search/search.component.html
+++ b/frontend/src/app/pages/search/search.component.html
@@ -6,7 +6,7 @@
   <div *ngIf="!error">
     <div>{{ products.length }} Results</div>
     <div class="divider"></div>
-    <div fxLayout="row wrap" fxLayoutGap="20px grid">
+    <div fxLayout="row wrap" fxLayoutGap="20px grid" fxLayoutGap.xs="10px grid">
       <div
         [fxFlex]="100 / 3 + '%'"
         fxFlex.xs="100%"
