--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -13,11 +13,11 @@
 }
 
 .example-container {
-  position: absolute;
+  /* position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
-  right: 0;
+  right: 0; */
 }
 
 .sidenav .header {
