--- a/frontend/src/app/pages/cart/cart.component.html
+++ b/frontend/src/app/pages/cart/cart.component.html
@@ -6,7 +6,7 @@
       <ng-container matColumnDef="image">
         <th mat-header-cell *matHeaderCellDef>Image</th>
         <td class="thumbnail-cell" mat-cell *matCellDef="let element">
-          <img [src]="'../assets' + element.image" class="thumbnail" />
+          <img [src]="element.image" class="thumbnail" />
         </td>
       </ng-container>
       <!-- Name Column -->
@@ -62,8 +62,8 @@
 
   <div fxFlex="30%" fxFlex.xs="100%" class="mt-20">
     <mat-card class="mat-elevation-z4">
-      <mat-list role="list">
-        <mat-list-item role="listitem">
+      <mat-list>
+        <mat-list-item>
           <h2>Subtotal ({{ cart.itemsCount }}) : ${{ cart.itemsPrice }}</h2>
         </mat-list-item>
       </mat-list>
