--- a/frontend/src/app/pages/product-details/product-details.component.html
+++ b/frontend/src/app/pages/product-details/product-details.component.html
@@ -1,53 +1,77 @@
-<div class="back-to-result">
-  <a routerLink="/">Back to result</a>
+<div *ngIf="loading; else result">
+  <mat-spinner></mat-spinner>
 </div>
-<div fxLayout="row wrap" fxLayoutGap="20px grid" fxLayoutGap.xs="0 grid">
-  <div fxFlex="50%" fxFlex.xs="100%">
-    <img mat-card-image [src]="'../assets' + product.image" />
-  </div>
 
-  <div fxFlex="25%" fxFlex.xs="100%">
-    <h1>{{ product.name }}</h1>
-    <mat-list role="list">
-      <mat-list-item role="listitem"> brand: {{ product.name }}</mat-list-item>
-      <mat-list-item role="listitem">
-        category: {{ product.category }}</mat-list-item
-      >
-      <mat-list-item role="listitem"> brand: {{ product.brand }}</mat-list-item>
-      <mat-list-item role="listitem">
-        description: {{ product.description }}</mat-list-item
-      >
-    </mat-list>
-  </div>
+<ng-template #result>
+  <div *ngIf="!error">
+    <div class="back-to-result">
+      <a routerLink="/">Back to result</a>
+    </div>
+    <div fxLayout="row wrap" fxLayoutGap="20px grid" fxLayoutGap.xs="0 grid">
+      <div fxFlex="50%" fxFlex.xs="100%">
+        <img mat-card-image [src]="product.image" />
+      </div>
 
-  <div fxFlex="25%" fxFlex.xs="100%">
-    <mat-card class="mat-elevation-z4">
-      <mat-list role="list">
-        <mat-list-item role="listitem">
-          <div class="full-width" fxLayout="row">
-            <div fxFlex="50%">Price:</div>
-            <div fxFlex="50%">${{ product.price }}</div>
-          </div>
-        </mat-list-item>
-        <mat-list-item role="listitem">
-          <div class="full-width" fxLayout="row">
-            <div fxFlex="50%">Status:</div>
-            <div fxFlex="50%">
-              {{ product.countInStock > 0 ? "In Stock" : "Unavailable" }}
-            </div>
-          </div>
+      <div fxFlex="25%" fxFlex.xs="100%">
+        <h1>{{ product.name }}</h1>
+        <app-rating
+          [rating]="product.rating"
+          [numReviews]="product.numReviews"
+          [reviewUrl]="['/product/' + product.slug]"
+        ></app-rating>
+        <mat-list>
+          <mat-list-item> brand: {{ product.name }}</mat-list-item>
+          <mat-list-item> category: {{ product.category }}</mat-list-item>
+          <mat-list-item> brand: {{ product.brand }}</mat-list-item>
+          <mat-list-item> description: {{ product.description }}</mat-list-item>
+        </mat-list>
+      </div>
+
+      <div fxFlex="25%" fxFlex.xs="100%">
+        <mat-card class="mat-elevation-z4">
+          <mat-list>
+            <mat-list-item>
+              <div class="full-width" fxLayout="row">
+                <div fxFlex="50%">Price:</div>
+                <div fxFlex="50%">${{ product.price }}</div>
+              </div>
+            </mat-list-item>
+            <mat-list-item>
+              <div class="full-width" fxLayout="row">
+                <div fxFlex="50%">Status:</div>
+                <div fxFlex="50%">
+                  {{ product.countInStock > 0 ? "In Stock" : "Unavailable" }}
+                </div>
+              </div>
+            </mat-list-item>
+          </mat-list>
+          <mat-card-actions>
+            <button
+              class="full-width"
+              mat-raised-button
+              color="primary"
+              (click)="addToCart()"
+            >
+              ADD TO CART
+            </button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+    </div>
+    <div name="reviews">
+      <mat-list *ngFor="let review of product.reviews">
+        <mat-list-item>
+          <p>
+            <strong>{{ review.name }}</strong>
+          </p>
+          <app-rating [rating]="review.rating"></app-rating>
+          <p>
+            <strong>{{ review.comment }}</strong>
+          </p>
+          <p></p>
+          <mat-divider></mat-divider>
         </mat-list-item>
       </mat-list>
-      <mat-card-actions>
-        <button
-          class="full-width"
-          mat-raised-button
-          color="primary"
-          (click)="addToCart()"
-        >
-          ADD TO CART
-        </button>
-      </mat-card-actions>
-    </mat-card>
+    </div>
   </div>
-</div>
+</ng-template>
