--- a/frontend/src/app/pages/profile/profile.component.html
+++ b/frontend/src/app/pages/profile/profile.component.html
@@ -3,8 +3,8 @@
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <h2>Update Profile</h2>
 
-      <mat-list role="list">
-        <mat-list-item role="listitem">
+      <mat-list>
+        <mat-list-item>
           <mat-form-field class="full-width">
             <input
               matInput
@@ -16,7 +16,7 @@
           </mat-form-field>
         </mat-list-item>
 
-        <mat-list-item role="listitem">
+        <mat-list-item>
           <mat-form-field class="full-width">
             <input
               matInput
@@ -27,7 +27,7 @@
             <mat-error> Please provide a valid email address </mat-error>
           </mat-form-field>
         </mat-list-item>
-        <mat-list-item role="listitem">
+        <mat-list-item>
           <mat-form-field class="full-width">
             <input
               matInput
@@ -38,7 +38,7 @@
             <mat-error> Please provide a valid password </mat-error>
           </mat-form-field>
         </mat-list-item>
-        <mat-list-item role="listitem">
+        <mat-list-item>
           <mat-form-field class="full-width">
             <input
               matInput
@@ -49,7 +49,7 @@
             <mat-error> Please provide above password again</mat-error>
           </mat-form-field>
         </mat-list-item>
-        <mat-list-item role="listitem">
+        <mat-list-item>
           <button [disabled]="loading" mat-raised-button color="primary">
             Update
           </button>
