--- a/frontend/src/app/pages/register/register.component.html
+++ b/frontend/src/app/pages/register/register.component.html
@@ -3,8 +3,8 @@
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <h2>Register</h2>
 
-      <mat-list role="list">
-        <mat-list-item role="listitem">
+      <mat-list>
+        <mat-list-item>
           <mat-form-field class="full-width">
             <input
               matInput
@@ -16,7 +16,7 @@
           </mat-form-field>
         </mat-list-item>
 
-        <mat-list-item role="listitem">
+        <mat-list-item>
           <mat-form-field class="full-width">
             <input
               matInput
@@ -27,7 +27,7 @@
             <mat-error> Please provide a valid email address </mat-error>
           </mat-form-field>
         </mat-list-item>
-        <mat-list-item role="listitem">
+        <mat-list-item>
           <mat-form-field class="full-width">
             <input
               matInput
@@ -39,7 +39,7 @@
             <mat-error> Please provide a valid password </mat-error>
           </mat-form-field>
         </mat-list-item>
-        <mat-list-item role="listitem">
+        <mat-list-item>
           <mat-form-field class="full-width">
             <input
               matInput
@@ -51,14 +51,14 @@
             <mat-error> Please provide above password again</mat-error>
           </mat-form-field>
         </mat-list-item>
-        <mat-list-item role="listitem">
+        <mat-list-item>
           <button [disabled]="loading" mat-raised-button color="primary">
             Register
           </button>
           <mat-spinner [diameter]="30" *ngIf="loading"></mat-spinner>
         </mat-list-item>
 
-        <mat-list-item role="listitem">
+        <mat-list-item>
           Aready have an account? &nbsp;
           <a [routerLink]="['/login']" [queryParams]="{ returnUrl: returnUrl }"
             >Register</a
