--- a/frontend/src/app/pages/search/search.component.html
+++ b/frontend/src/app/pages/search/search.component.html
@@ -8,14 +8,14 @@
     <div class="divider"></div>
     <div fxLayout="row wrap" fxLayoutGap="20px grid" fxLayoutGap.xs="10px grid">
       <div
-        [fxFlex]="100 / 3 + '%'"
-        fxFlex.xs="100%"
+        fxFlex="25%"
         fxFlex.sm="33%"
+        fxFlex.xs="100%"
         *ngFor="let product of products"
       >
         <mat-card class="mat-elevation-z4">
           <a [routerLink]="'/product/' + product.slug">
-            <img mat-card-image [src]="'../assets' + product.image" />
+            <img mat-card-image [src]="product.image" />
             <mat-card-content>
               <p>
                 {{ product.name }}
