--- a/frontend/src/app/pages/shipping-address/shipping-address.component.html
+++ b/frontend/src/app/pages/shipping-address/shipping-address.component.html
@@ -9,57 +9,88 @@
       <mat-card-content>
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
           <h2>Shipping Address</h2>
-          <mat-form-field class="full-width-input">
-            <input
-              matInput
-              placeholder="Full Name"
-              formControlName="fullName"
-              required
-            />
-            <mat-error> This field is required </mat-error>
-          </mat-form-field>
-
-          <mat-form-field class="full-width-input">
-            <input
-              matInput
-              placeholder="Address"
-              formControlName="address"
-              required
-            />
-            <mat-error> This field is required </mat-error>
-          </mat-form-field>
-
-          <mat-form-field class="full-width-input">
-            <input
-              matInput
-              placeholder="City"
-              formControlName="city"
-              required
-            />
-            <mat-error> This field is required </mat-error>
-          </mat-form-field>
-
-          <mat-form-field class="full-width-input">
-            <input
-              matInput
-              placeholder="Country"
-              formControlName="country"
-              required
-            />
-            <mat-error> This field is required </mat-error>
-          </mat-form-field>
-
-          <mat-form-field class="full-width-input">
-            <input
-              matInput
-              placeholder="Postal Code"
-              formControlName="postalCode"
-              required
-            />
-            <mat-error> This field is required </mat-error>
-          </mat-form-field>
-
-          <button color="primary" mat-raised-button mat-button>Next</button>
+          <mat-list>
+            <mat-list-item>
+              <mat-form-field class="full-width">
+                <input
+                  matInput
+                  placeholder="Full Name"
+                  formControlName="fullName"
+                  required
+                />
+                <mat-error> This field is required </mat-error>
+              </mat-form-field>
+            </mat-list-item>
+            <mat-list-item>
+              <mat-form-field class="full-width">
+                <input
+                  matInput
+                  placeholder="Address"
+                  formControlName="address"
+                  required
+                />
+                <mat-error> This field is required </mat-error>
+              </mat-form-field>
+            </mat-list-item>
+            <mat-list-item>
+              <mat-form-field class="full-width">
+                <input
+                  matInput
+                  placeholder="City"
+                  formControlName="city"
+                  required
+                />
+                <mat-error> This field is required </mat-error>
+              </mat-form-field>
+            </mat-list-item>
+            <mat-list-item>
+              <mat-form-field class="full-width">
+                <input
+                  matInput
+                  placeholder="Country"
+                  formControlName="country"
+                  required
+                />
+                <mat-error> This field is required </mat-error>
+              </mat-form-field>
+            </mat-list-item>
+            <mat-list-item>
+              <mat-form-field class="full-width">
+                <input
+                  matInput
+                  placeholder="Postal Code"
+                  formControlName="postalCode"
+                  required
+                />
+                <mat-error> This field is required </mat-error>
+              </mat-form-field>
+            </mat-list-item>
+            <mat-list-item>
+              <button
+                type="button"
+                (click)="chooseLocation()"
+                color="secondary"
+                mat-raised-button
+                mat-button
+              >
+                Choose On Map
+              </button>
+              <span class="small"
+                >LAT: {{ shippingLocation.lat }} <br />
+                LNG:{{ shippingLocation.lng }}</span
+              >
+            </mat-list-item>
+            <mat-list-item>
+              <button
+                class="full-width"
+                color="primary"
+                mat-raised-button
+                mat-button
+              >
+                Next
+              </button>
+            </mat-list-item>
+          </mat-list>
         </form>
       </mat-card-content>
     </mat-card>
