--- a/frontend/src/app/pages/product-details/product-details.component.html
+++ b/frontend/src/app/pages/product-details/product-details.component.html
@@ -59,19 +59,80 @@
       </div>
     </div>
     <div name="reviews">
+      <h2>Reviews</h2>
+      <p *ngIf="product.reviews.length === 0">No review submitted</p>
       <mat-list *ngFor="let review of product.reviews">
         <mat-list-item>
-          <p>
-            <strong>{{ review.name }}</strong>
-          </p>
-          <app-rating [rating]="review.rating"></app-rating>
-          <p>
-            <strong>{{ review.comment }}</strong>
-          </p>
-          <p></p>
-          <mat-divider></mat-divider>
+          <div>
+            <p>
+              <strong>{{ review.name }}</strong>
+            </p>
+            <app-rating [rating]="review.rating"></app-rating>
+            <p>
+              <strong>{{ review.comment }}</strong>
+            </p>
+            <mat-divider></mat-divider>
+          </div>
         </mat-list-item>
       </mat-list>
+      <p *ngIf="!currentUser">
+        Please
+        <a
+          routerLink="/login"
+          [queryParams]="{ returnUrl: '/product/' + product.slug }"
+          >login</a
+        >
+        to leave a review
+      </p>
+
+      <mat-card *ngIf="currentUser">
+        <mat-card-content>
+          <form [formGroup]="form" (ngSubmit)="onSubmit()">
+            <h2>Leave a review</h2>
+
+            <mat-list>
+              <mat-list-item>
+                <mat-form-field class="full-width">
+                  <input
+                    matInput
+                    placeholder="Comment"
+                    formControlName="comment"
+                    required
+                  />
+                  <mat-error> Please provide a comment </mat-error>
+                </mat-form-field>
+              </mat-list-item>
+
+              <mat-list-item>
+                <mat-form-field appearance="fill">
+                  <mat-label>Choose an option</mat-label>
+                  <select formControlName="rating" matNativeControl>
+                    <option value=""></option>
+                    <option value="1">1-Poor</option>
+                    <option value="2">2-Fear</option>
+                    <option value="3">3-Good</option>
+                    <option value="4">4-Very good</option>
+                    <option value="5">5-Excellent</option>
+                  </select>
+                </mat-form-field>
+              </mat-list-item>
+              <mat-list-item>
+                <button
+                  [disabled]="createReviewLoading"
+                  mat-raised-button
+                  color="primary"
+                >
+                  Submit
+                </button>
+                <mat-spinner
+                  [diameter]="30"
+                  *ngIf="createReviewLoading"
+                ></mat-spinner>
+              </mat-list-item>
+            </mat-list>
+          </form>
+        </mat-card-content>
+      </mat-card>
     </div>
   </div>
 </ng-template>
